# SecureInspect

./: README.md
file-integrity-checker/: .gitignore  LICENSE  README.md
file-integrity-checker/src/: analyzer.py  baseline_manager.py  hashing.py  integrity_checker.py  report_generator.py
file-integrity-checker/tests/: test_analyzer.py  test_hashing.py  test_report_generator.py
ghostglyph/: .gitignore  README.md  pyproject.toml
ghostglyph/ghostglyph/: cli.py  homoglyphs.py  reporters.py  scanner.py
ghostglyph/samples/: homoglyph_attack.txt  unicode_attack.txt
ghostglyph/tests/: test_homoglyphs.py  test_scanner.py
qr-code-safety-scanner/: .gitignore  LICENSE  README.md  requirements.txt
qr-code-safety-scanner/src/: analyzer.py  report_generator.py  risk_engine.py  scanner.py
qr-code-safety-scanner/tests/: test_analyzer.py  test_edge_cases.py  test_risk_engine.py  test_scanner_flow.py
