[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostglyph"
version = "1.0.0"

description = "Invisible Unicode Threat Detector"

readme = "README.md"

requires-python = ">=3.10"

dependencies = [
    "colorama>=0.4.6"
]

keywords = [
    "security",
    "cybersecurity",
    "unicode",
    "phishing",
    "cli"
]

[project.scripts]
ghostglyph = "ghostglyph.cli:main"

[tool.setuptools]
packages = ["ghostglyph"]